# supercell

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  LICENSE  README  README.1  README.md  appveyor.yml  deploy.sh  id_rsa-orex.io.enc  id_rsa_gh-pages.enc  index.html
.github/workflows/: supercell-cicd.yml
css/: supercell.css
data/examples/: Ca2Al2SiO7.cif  Fe2O3-P4332.cif  FeSbO4.cif  La3Ga5SiO14.cif  Li10GeP2S12_120717-1.cif  PbSnTe2.cif  RBPST1_DEHY_1_cor.cif  gamma-Fe2O3-simple.cif  gehlenite_1971_LouisnathanSJ.cif
data/examples/Ca2Al2SiO7/: Ca2Al2SiO7.cif  Ca2Al2SiO7_abg.cif  README
data/examples/CaAl6Te10/: CaAl6Te10.cif
data/examples/Cu2ZnSnSxSe4-x/: README  df_cfg.bash  stannite.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S0/: log.out  stannite-S0_ind0w_1.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S1/: log.out  stannite-S1_ind0w_8.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S2/: log.out  stannite-S2_ind00w_4.cif  stannite-S2_ind01w_8.cif  stannite-S2_ind02w_4.cif  stannite-S2_ind03w_4.cif  stannite-S2_ind04w_8.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S3/: log.out  stannite-S3_ind00w_8.cif  stannite-S3_ind01w_8.cif  stannite-S3_ind02w_8.cif  stannite-S3_ind03w_16.cif  stannite-S3_ind04w_16.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S4/: log.out  stannite-S4_ind00w_2.cif  stannite-S4_ind01w_16.cif  stannite-S4_ind02w_8.cif  stannite-S4_ind03w_8.cif  stannite-S4_ind04w_2.cif  stannite-S4_ind05w_16.cif  stannite-S4_ind06w_2.cif  stannite-S4_ind07w_4.cif  stannite-S4_ind08w_8.cif  stannite-S4_ind09w_4.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S5/: log.out  stannite-S5_ind00w_8.cif  stannite-S5_ind01w_8.cif  stannite-S5_ind02w_16.cif  stannite-S5_ind03w_16.cif  stannite-S5_ind04w_8.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S6/: log.out  stannite-S6_ind00w_4.cif  stannite-S6_ind01w_8.cif  stannite-S6_ind02w_4.cif  stannite-S6_ind03w_4.cif  stannite-S6_ind04w_8.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S7/: log.out  stannite-S7_ind0w_8.cif
data/examples/Cu2ZnSnSxSe4-x/cell111/S8/: log.out  stannite-S8_ind0w_1.cif
data/examples/FeSbO4/: README  df_cfg.bash
data/examples/MgAlFeO4/: MgAlFeO4.cif  README
data/examples/MnCaCO3/: MnCaCO3.cif  MnCaCO3_timing.bash  README
data/examples/PZT/: PZT-PbZr05Ti05O3.cif  README  df_cfg.bash
data/examples/PbSnTe/: README  df_cfg.bash
data/examples/PbSnTe-SQS/: PbSnTe-SQS.gin_template  README  df_cfg.bash
data/examples/Rb-PST-1/: RB-PST-1-DEHY_1_new.cif  README  df_cfg.bash
data/examples/SrSiAlO/: README  SrSiAlO.cif
data/examples/TeSe/: TeSe.cif
data/examples/Ti1-xMgxN/: README  Ti1-xMgxN.cif  df_cfg.bash
data/examples/alpha-SiGeO2/: README  alpha-SiGeO2.cif  df_cfg.bash
data/examples/beta-Li3PS4/: Li3PS4_PNMA_2011_icsd180319.cif  README  df_cfg.bash
data/examples/fcc/: AMS_DATA.cif
data/examples/gamma-Fe2O3/: Fe2O3-P4332.cif  README
data/examples/ice-Ih/: README  df_cfg.bash  ice-Ih.cif  ice-Ih.gin_template
data/examples/ice-Ih-adv/: README  df_cfg.bash  ice-Ih-121-adv.cif  ice-Ih.gin_template
data/examples/olivine/: olivine.cif
data/examples/synth_complex/: sc.vesta  supercheck.cif  supercheck_nd.cif
deploy_artifacts/fix_issue37/doc/: supercell_man.html
deploy_artifacts/ob3_support/doc/: supercell_man.html
deploy_artifacts/ob_compile_fix/doc/: supercell_man.html
deploy_artifacts/supercell_v1.2/doc/: supercell_man.html
deploy_artifacts/symm_fix/doc/: supercell_man.html
deploy_artifacts/tutorial_20/doc/: supercell_man.html
deploy_artifacts/v2.0.1/doc/: supercell_man.html
deploy_artifacts/v2.0.2/doc/: supercell_man.css  supercell_man.html
deploy_artifacts/version2/doc/: supercell_man.html
doc/: CMakeLists.txt  supercell.1  supercell_man.html  supercell_man.tex
doc/man/: CMakeLists.txt  supercell.1  supercell_man.tex
doc/tutorial/: CMakeLists.txt  supercell_tutorial.bbl  supercell_tutorial.bib  supercell_tutorial.tex
impr_deploy/doc/: supercell_man.html
libs/: CMakeLists.txt
libs/combinatorics/: CMakeLists.txt
libs/common_utils/: .gitignore  CMakeLists.txt  LICENSE  README.md
libs/common_utils/assigned_variable/: av_base.hpp  av_serialize.hpp
libs/common_utils/others/: TStatisticCollect.cpp  TStatisticCollect.h  file_utils.cpp  file_utils.h  string_utils.cpp  string_utils.h  timing_utils.cpp  timing_utils.h
libs/common_utils/scanf_pp/: base.hpp
libs/common_utils/science/: math_utils.cpp  math_utils.h  nmr_utils.cpp  nmr_utils.h  physical_const.h
libs/common_utils/tests/: CMakeLists.txt  test_str.cpp
libs/utils/: c_assigned_value.h  combinatorics.h  rnd_utils.cpp  rnd_utils.h  string_utils.cpp
scripts/: latex_compile.sh
scripts/latex2man/: README  latex2man
snap/: snapcraft.yaml
src/: CMakeLists.txt
src/core/: archive_extent_patch.h  cif_io.cpp  cif_io.h  common_types.cpp  common_types.h  d2o_main_class.cpp  d2o_main_class.h  hash_unique.h  permut_process_t.cpp  permut_process_t.h
src/sc_cli/: CMakeLists.txt  main.cpp  parse_d2o_input.cpp  parse_d2o_input.h
src/tests/: CMakeLists.txt  test_random_sampler.cpp
src/tests/regression/: electrostatic_check.py  general_checks.py  regression_test.py
src/tests/regression/data/: Ca2Al2SiO7.cif  CaAl6Te10.cif  PbSnTe2.cif  RB-PST-1-DEHY_1_new.cif  SrSiAlO_1x2x1.cif
test/: index.html
v1.2/doc/: supercell_man.html
